--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## create the object '**fragility23**' to hold the contents
 
 # starting fresh
-
+# removes an deletes every object in r memory
 rm(list = ls())
 
 # opening a file from a url (file in Excel), name it 'fragility23'
@@ -55,7 +55,9 @@ tail(fragility23,10)
 ## into object 'frag23_sub'
 grep(pattern = "Country|S1|P1|E2|Total",x = names(fragility23),fixed = F,value = T) # test
 
+# gets the names of the 5 columns we are searching for
 keep=grep("Country|S1|P1|E2|Total",names(fragility23),fixed = F,value = T)
+# creates a new df with only those 5 columns
 frag23_sub=fragility23[,keep]
 
 
@@ -64,6 +66,7 @@ names(frag23_sub)[3:5]=c("S1","E2", "P1")
 
 ## get me the top ten best countries on the column 'E2' from 'frag23_sub'
 tail(frag23_sub[order(x=-frag23_sub$E2),],10) #option1
+## another way of getting "the top ten best countries on the column 'E2' from 'frag23_sub'"
 tail(frag23_sub[order(x=-frag23_sub$E2),'Country'],10) #option2
 
 
@@ -81,12 +84,13 @@ cor(x=frag23_sub[,-c(1,2)]) #no 'Country', no "Total'
 ## show correlations between "S1","E2", "P1" and their "significance"
 #?install.packages("corrtable")
 library(corrtable)
+# calc correlations between "S1","E2", "P1" and their "significance"
 corrtable::correlation_matrix(df = frag23_sub[,-c(1,2)])
 
 ## regress P1 and E2 on S1
-lm(S1~P1+E2,data=frag23_sub)
-model <- lm(S1 ~ P1 + E2, data = frag23_sub)
-summary(model)
+lm(S1~P1+E2,data=frag23_sub) # calculates the lm model
+model <- lm(S1 ~ P1 + E2, data = frag23_sub) # recalculates lm model and assigns a refrence to it
+summary(model) # prints out relevant details of the produced model
 ```
 
 
@@ -107,11 +111,11 @@ plot(x=frag23_sub$S1, y=frag23_sub$E2)
 
 ```{r color points if country is on the worst quartile of Total}
 ## color points if country is on the worst quartile of Total
-frag23_sub$Total>=q3_Total
-frag23_sub$worstQt=frag23_sub$Total>=q3_Total
+frag23_sub$Total>=q3_Total # prints a col where frag23_sub$Total val's are assigned T/F depending on wehter they are greater than q3_total or not
+frag23_sub$worstQt=frag23_sub$Total>=q3_Total # assings the T/F column values from checking total row values against q3_total into a new column worstQt
 plot(frag23_sub$S1, 
      frag23_sub$E2,pch=20,
-     col = as.factor(frag23_sub$worstQt))
+     col = as.factor(frag23_sub$worstQt)) # plots a scatter plot on S1 and E2 where the points could be colored either one of 2 colors depending on their worstQt value
 ```
 
 
@@ -119,5 +123,5 @@ plot(frag23_sub$S1,
 ## visual of the regression P1 and E2 on S1
 #install.packages("sjPlot")
 library(sjPlot)
-plot_models(model)
+plot_models(model) # plot regression of P1 and E2 on S1
 ```
